<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Game">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="418dp"
        android:layout_height="307dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dice_image_view_2">

        <Button
            android:id="@+id/wooden_card_1"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/number_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/wooden_card_2"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/number_2"
            app:layout_constraintLeft_toRightOf="@+id/wooden_card_1"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/wooden_card_3"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/number_3"
            app:layout_constraintLeft_toRightOf="@+id/wooden_card_2"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/wooden_card_4"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/number_4"
            app:layout_constraintLeft_toRightOf="@+id/wooden_card_3"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/wooden_card_5"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="20dp"
            android:text="@string/number_5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wooden_card_1" />

        <Button
            android:id="@+id/wooden_card_6"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="5dp"
            android:text="@string/number_6"
            app:layout_constraintLeft_toRightOf="@+id/wooden_card_5"
            app:layout_constraintTop_toBottomOf="@+id/wooden_card_2" />

        <Button
            android:id="@+id/wooden_card_7"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="5dp"
            android:text="@string/number_7"
            app:layout_constraintLeft_toRightOf="@+id/wooden_card_6"
            app:layout_constraintTop_toBottomOf="@+id/wooden_card_3" />

        <Button
            android:id="@+id/wooden_card_8"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="5dp"
            android:text="@string/number_8"
            app:layout_constraintLeft_toRightOf="@+id/wooden_card_7"
            app:layout_constraintTop_toBottomOf="@+id/wooden_card_4" />


        <Button
            android:id="@+id/wooden_card_9"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="20dp"
            android:text="@string/number_9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wooden_card_5" />

        <Button
            android:id="@+id/wooden_card_10"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="5dp"
            android:text="@string/number_10"
            app:layout_constraintLeft_toRightOf="@+id/wooden_card_9"
            app:layout_constraintTop_toBottomOf="@+id/wooden_card_6" />

        <Button
            android:id="@+id/wooden_card_11"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="5dp"
            android:text="@string/number_11"
            app:layout_constraintLeft_toRightOf="@+id/wooden_card_10"
            app:layout_constraintTop_toBottomOf="@+id/wooden_card_7" />

        <Button
            android:id="@+id/wooden_card_12"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="5dp"
            android:text="@string/number_12"
            app:layout_constraintLeft_toRightOf="@+id/wooden_card_11"
            app:layout_constraintTop_toBottomOf="@+id/wooden_card_8" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/game_roll_dice_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/text_roll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <Button
        android:id="@+id/game_finish_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="10dp"
        android:text="@string/text_finish"
        app:layout_constraintStart_toEndOf="@+id/game_roll_dice_button"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <Button
        android:id="@+id/game_quit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:text="@string/text_quit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/game_player_name_one"
        android:layout_width="198dp"
        android:layout_height="36dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="35dp"
        android:text="@string/player_1_name"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/game_player_name_two"
        android:layout_width="198dp"
        android:layout_height="36dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/player_1_name"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_player_name_one" />

    <TextView
        android:id="@+id/game_player_name_three"
        android:layout_width="198dp"
        android:layout_height="36dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/player_1_name"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_player_name_two" />

    <ImageView
        android:id="@+id/dice_image_view_1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="90dp"
        android:contentDescription="@string/roll_me"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dice1" />

    <ImageView
        android:id="@+id/dice_image_view_2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/roll_me"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dice_image_view_1"
        app:srcCompat="@drawable/dice4" />

</androidx.constraintlayout.widget.ConstraintLayout>