<resources>
    <string name="app_name">ShutTheBox</string>
    <string name="shut_the_box_text">Shut The Box</string>
    <string name="play_shut_the_box_together">Play Shut The Box Together!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_here_create_an_account">New here? Create an Account</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here</string>
    <string name="display_name">Display Name</string>
    <string name="create_an_account">Create An Account</string>
    <string name="go_to_default_room">Go to default room</string>
    <string name="switch_account">Switch Account</string>
    <string name="game_room_1">Game Room 1</string>
    <string name="status_available">Status: available</string>
    <string name="join_room">Join Room</string>
    <string name="current_players_0">Current Players: 0</string>
    <string name="game_shut_the_box">Game: Shut the box</string>
    <string name="game_room_2">Game Room 2</string>
    <string name="ready">Ready</string>
    <string name="leave">Leave</string>
    <string name="start">Start</string>
    <string name="player_1_name">Player 1 Name</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_8">8</string>
    <string name="number_10">10</string>
    <string name="number_11">11</string>
    <string name="number_7">7</string>
    <string name="number_6">6</string>
    <string name="number_4">4</string>
    <string name="number_9">9</string>
    <string name="number_3">3</string>
    <string name="number_12">12</string>
    <string name="number_5">5</string>
    <string name="text_roll">Roll</string>
    <string name="text_finish">Finish</string>
    <string name="text_quit">Quit</string>
    <string name="end_of_game">End of game</string>
    <string name="push_up_time_for">Push up time for</string>
    <string name="go_to_lobby">Go to lobby</string>
    <string name="time_to_push_ups">Time to push ups!</string>
    <string name="roll_me">Roll me</string>
    <string name="add_string">Add</string>
    <string name="welcome_to_game_room_1">Welcome to game room 1</string>
    <string name="status_unavailable">Status: unavailable</string>
    <string name="current_players">Current Players:</string>
</resources>