...
        android:layout_marginEnd="52dp"
        android:text="@string/switch_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_room_2_section" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/game_room_1_section"
        android:layout_width="352dp"
        android:layout_height="237dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="35dp"
        android:background="#B2E7ED"
...
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game_room_1_name" />

        <Button
            android:id="@+id/join_room_1_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="15dp"
            android:text="@string/join_room"
            app:layout_constraintBottom_toBottomOf="parent"
...
